; ModuleID = '/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/kgdb/extr_trgt.c_kgdb_trgt_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/gnu/usr.bin/gdb/kgdb/extr_trgt.c_kgdb_trgt_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32*, i32* }

@kvm = common dso_local global i32* null, align 8
@null_ptid = common dso_local global i32 0, align 4
@inferior_ptid = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"cannot close \22%s\22: %s\00", align 1
@vmcore = common dso_local global i32* null, align 8
@kgdb_trgt_ops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @kgdb_trgt_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kgdb_trgt_close(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32*, i32** @kvm, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %25

5:                                                ; preds = %1
  %6 = load i32, i32* @null_ptid, align 4
  store i32 %6, i32* @inferior_ptid, align 4
  %7 = call i32 (...) @CLEAR_SOLIB()
  %8 = load i32*, i32** @kvm, align 8
  %9 = call i64 @kvm_close(i32* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %5
  %12 = load i32*, i32** @vmcore, align 8
  %13 = load i32*, i32** @kvm, align 8
  %14 = call i32 @kvm_geterr(i32* %13)
  %15 = call i32 @warning(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32* %12, i32 %14)
  br label %16

16:                                               ; preds = %11, %5
  store i32* null, i32** @kvm, align 8
  %17 = load i32*, i32** @vmcore, align 8
  %18 = call i32 @xfree(i32* %17)
  store i32* null, i32** @vmcore, align 8
  %19 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kgdb_trgt_ops, i32 0, i32 1), align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %24

21:                                               ; preds = %16
  %22 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kgdb_trgt_ops, i32 0, i32 1), align 8
  %23 = call i32 @xfree(i32* %22)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kgdb_trgt_ops, i32 0, i32 1), align 8
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @kgdb_trgt_ops, i32 0, i32 0), align 8
  br label %24

24:                                               ; preds = %21, %16
  br label %25

25:                                               ; preds = %24, %1
  ret void
}

declare dso_local i32 @CLEAR_SOLIB(...) #1

declare dso_local i64 @kvm_close(i32*) #1

declare dso_local i32 @warning(i8*, i32*, i32) #1

declare dso_local i32 @kvm_geterr(i32*) #1

declare dso_local i32 @xfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
